--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-experiments/with_energy/100*100_10K/1sim_movies/.DS_Store
+__pycache__/
+output*.csv
+utils/__pycache__/
+venv/
+updates.txt
 .DS_Store
-experiments/.DS_Store
-experiments/with_energy/.DS_Store
+animation/
+tests/
+analyse_results/
+experiments/without_energy/.DS_Store
+experiments/without_energy/500*500_1K/.DS_Store
+*.DS_Store
+*.DS_Store*
+.DS_Store*
+
